[gd_scene load_steps=52 format=2]

[ext_resource path="res://Levels/LevelTemplate.gd" type="Script" id=1]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_crossing_E.png" type="Texture" id=2]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_split_S.png" type="Texture" id=3]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_straight_S.png" type="Texture" id=4]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_end_S.png" type="Texture" id=5]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_cornerSquare_E.png" type="Texture" id=6]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_end_E.png" type="Texture" id=7]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_end_N.png" type="Texture" id=8]
[ext_resource path="res://Levels/Maps/Assets/Spring/Ground/tile_E.png" type="Texture" id=9]
[ext_resource path="res://Levels/Maps/Assets/Spring/Ground/HighlightedGround.png" type="Texture" id=10]
[ext_resource path="res://Levels/Maps/Assets/Spring/Ground/TempRoad.png" type="Texture" id=11]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_rock_E.png" type="Texture" id=12]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_rock_N.png" type="Texture" id=13]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_split_W.png" type="Texture" id=14]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_rock_S.png" type="Texture" id=15]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_rock_W.png" type="Texture" id=16]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_hill_E.png" type="Texture" id=17]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_hill_N.png" type="Texture" id=18]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_hill_S.png" type="Texture" id=19]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_hill_W.png" type="Texture" id=20]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_crystal_E.png" type="Texture" id=21]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_crystal_N.png" type="Texture" id=22]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_crystal_S.png" type="Texture" id=23]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_crystal_W.png" type="Texture" id=24]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_cornerSquare_W.png" type="Texture" id=25]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_tree_E.png" type="Texture" id=26]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_treeQuad_N.png" type="Texture" id=27]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_treeQuad_E.png" type="Texture" id=28]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_treeDouble_N.png" type="Texture" id=29]
[ext_resource path="res://Levels/Maps/Assets/Spring/Details/tile_treeDouble_E.png" type="Texture" id=30]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_split_N.png" type="Texture" id=31]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_straight_W.png" type="Texture" id=32]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_cornerSquare_N.png" type="Texture" id=33]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_end_W.png" type="Texture" id=34]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_split_E.png" type="Texture" id=35]
[ext_resource path="res://Levels/Maps/Assets/Spring/Roads/tile_cornerSquare_S.png" type="Texture" id=36]
[ext_resource path="res://Towers/Assets/towerSquare_sampleE_E.png" type="Texture" id=37]
[ext_resource path="res://UI/Assets/Buttons/Menus/pause.png" type="Texture" id=38]
[ext_resource path="res://UI/Assets/Buttons/Menus/menuList.png" type="Texture" id=39]
[ext_resource path="res://UI/Assets/Buttons/Menus/question.png" type="Texture" id=40]
[ext_resource path="res://UI/Assets/blue_button05.png" type="Texture" id=41]
[ext_resource path="res://UI/Assets/Buttons/grey_button12.png" type="Texture" id=42]
[ext_resource path="res://UI/Assets/Buttons/grey_button13.png" type="Texture" id=43]
[ext_resource path="res://UI/Assets/Buttons/yellow_button06.png" type="Texture" id=44]
[ext_resource path="res://UI/Assets/Buttons/towerRound_sampleC.png" type="Texture" id=45]
[ext_resource path="res://UI/Assets/Buttons/towerSquare_sampleE.png" type="Texture" id=46]
[ext_resource path="res://DebugTesting/LaserTest.tscn" type="PackedScene" id=47]

[sub_resource type="TileSet" id=1]
0/name = "tile_crossing_E.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 192, 256, 128, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "tile_split_S.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 192, 256, 128, 96 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "tile_split_W.png 2"
2/texture = ExtResource( 14 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 192, 256, 128, 96 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "tile_cornerSquare_W.png 3"
3/texture = ExtResource( 25 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 192, 256, 128, 96 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "tile_split_N.png 4"
4/texture = ExtResource( 31 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 192, 256, 128, 96 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "tile_straight_W.png 5"
5/texture = ExtResource( 32 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 192, 256, 128, 96 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "tile_cornerSquare_N.png 6"
6/texture = ExtResource( 33 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 192, 256, 128, 96 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
7/name = "tile_end_W.png 7"
7/texture = ExtResource( 34 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 192, 256, 128, 96 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [  ]
7/z_index = 0
8/name = "tile_split_E.png 8"
8/texture = ExtResource( 35 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 192, 256, 128, 96 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [  ]
8/z_index = 0
9/name = "tile_cornerSquare_S.png 9"
9/texture = ExtResource( 36 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 192, 256, 128, 96 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [  ]
9/z_index = 0
10/name = "tile_straight_S.png 10"
10/texture = ExtResource( 4 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 192, 256, 128, 96 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shapes = [  ]
10/z_index = 0
11/name = "tile_end_S.png 11"
11/texture = ExtResource( 5 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 192, 256, 128, 96 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shapes = [  ]
11/z_index = 0
12/name = "tile_cornerSquare_E.png 12"
12/texture = ExtResource( 6 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 192, 256, 128, 96 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shapes = [  ]
12/z_index = 0
13/name = "tile_end_E.png 13"
13/texture = ExtResource( 7 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 192, 256, 128, 96 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shapes = [  ]
13/z_index = 0
14/name = "tile_end_N.png 14"
14/texture = ExtResource( 8 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 192, 256, 128, 96 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shapes = [  ]
14/z_index = 0
15/name = "tile_E.png 15"
15/texture = ExtResource( 9 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 192, 256, 128, 96 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shapes = [  ]
15/z_index = 0
16/name = "HighlightedGround.png 16"
16/texture = ExtResource( 10 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 0.976471, 0.909804, 0.0862745, 1 )
16/region = Rect2( 192, 256, 128, 96 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shapes = [  ]
16/z_index = 0
17/name = "TempRoad.png 17"
17/texture = ExtResource( 11 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 0.317647, 0, 0, 1 )
17/region = Rect2( 192, 256, 128, 96 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shapes = [  ]
17/z_index = 0
18/name = "tile_rock_E.png 18"
18/texture = ExtResource( 12 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 192, 256, 128, 96 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shapes = [  ]
18/z_index = 0
19/name = "tile_rock_N.png 19"
19/texture = ExtResource( 13 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 192, 256, 128, 96 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shapes = [  ]
19/z_index = 0
20/name = "tile_rock_S.png 20"
20/texture = ExtResource( 15 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 192, 256, 128, 96 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shapes = [  ]
20/z_index = 0
21/name = "tile_rock_W.png 21"
21/texture = ExtResource( 16 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 192, 256, 128, 96 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shapes = [  ]
21/z_index = 0
22/name = "tile_hill_E.png 22"
22/texture = ExtResource( 17 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 192, 256, 128, 96 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shapes = [  ]
22/z_index = 0
23/name = "tile_hill_N.png 23"
23/texture = ExtResource( 18 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 192, 256, 128, 96 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shapes = [  ]
23/z_index = 0
24/name = "tile_hill_S.png 24"
24/texture = ExtResource( 19 )
24/tex_offset = Vector2( 0, 0 )
24/modulate = Color( 1, 1, 1, 1 )
24/region = Rect2( 192, 256, 128, 96 )
24/tile_mode = 0
24/occluder_offset = Vector2( 0, 0 )
24/navigation_offset = Vector2( 0, 0 )
24/shapes = [  ]
24/z_index = 0
25/name = "tile_hill_W.png 25"
25/texture = ExtResource( 20 )
25/tex_offset = Vector2( 0, 0 )
25/modulate = Color( 1, 1, 1, 1 )
25/region = Rect2( 192, 256, 128, 96 )
25/tile_mode = 0
25/occluder_offset = Vector2( 0, 0 )
25/navigation_offset = Vector2( 0, 0 )
25/shapes = [  ]
25/z_index = 0
26/name = "tile_crystal_E.png 26"
26/texture = ExtResource( 21 )
26/tex_offset = Vector2( 0, -32 )
26/modulate = Color( 1, 1, 1, 1 )
26/region = Rect2( 192, 224, 128, 128 )
26/tile_mode = 0
26/occluder_offset = Vector2( 0, 0 )
26/navigation_offset = Vector2( 0, 0 )
26/shapes = [  ]
26/z_index = 0
27/name = "tile_crystal_N.png 27"
27/texture = ExtResource( 22 )
27/tex_offset = Vector2( 0, -32 )
27/modulate = Color( 1, 1, 1, 1 )
27/region = Rect2( 192, 224, 128, 128 )
27/tile_mode = 0
27/occluder_offset = Vector2( 0, 0 )
27/navigation_offset = Vector2( 0, 0 )
27/shapes = [  ]
27/z_index = 0
28/name = "tile_crystal_S.png 28"
28/texture = ExtResource( 23 )
28/tex_offset = Vector2( 0, -32 )
28/modulate = Color( 1, 1, 1, 1 )
28/region = Rect2( 192, 224, 128, 128 )
28/tile_mode = 0
28/occluder_offset = Vector2( 0, 0 )
28/navigation_offset = Vector2( 0, 0 )
28/shapes = [  ]
28/z_index = 0
29/name = "tile_crystal_W.png 29"
29/texture = ExtResource( 24 )
29/tex_offset = Vector2( 0, -32 )
29/modulate = Color( 1, 1, 1, 1 )
29/region = Rect2( 192, 224, 128, 128 )
29/tile_mode = 0
29/occluder_offset = Vector2( 0, 0 )
29/navigation_offset = Vector2( 0, 0 )
29/shapes = [  ]
29/z_index = 0
30/name = "tile_tree_E.png 30"
30/texture = ExtResource( 26 )
30/tex_offset = Vector2( 0, -32 )
30/modulate = Color( 1, 1, 1, 1 )
30/region = Rect2( 192, 224, 128, 128 )
30/tile_mode = 0
30/occluder_offset = Vector2( 0, 0 )
30/navigation_offset = Vector2( 0, 0 )
30/shapes = [  ]
30/z_index = 0
31/name = "tile_treeQuad_N.png 31"
31/texture = ExtResource( 27 )
31/tex_offset = Vector2( 0, -32 )
31/modulate = Color( 1, 1, 1, 1 )
31/region = Rect2( 192, 224, 128, 128 )
31/tile_mode = 0
31/occluder_offset = Vector2( 0, 0 )
31/navigation_offset = Vector2( 0, 0 )
31/shapes = [  ]
31/z_index = 0
32/name = "tile_treeQuad_E.png 32"
32/texture = ExtResource( 28 )
32/tex_offset = Vector2( 0, -64 )
32/modulate = Color( 1, 1, 1, 1 )
32/region = Rect2( 192, 192, 128, 160 )
32/tile_mode = 0
32/occluder_offset = Vector2( 0, 0 )
32/navigation_offset = Vector2( 0, 0 )
32/shapes = [  ]
32/z_index = 0
33/name = "tile_treeDouble_N.png 33"
33/texture = ExtResource( 29 )
33/tex_offset = Vector2( 0, -32 )
33/modulate = Color( 1, 1, 1, 1 )
33/region = Rect2( 192, 224, 128, 128 )
33/tile_mode = 0
33/occluder_offset = Vector2( 0, 0 )
33/navigation_offset = Vector2( 0, 0 )
33/shapes = [  ]
33/z_index = 0
34/name = "tile_treeDouble_E.png 34"
34/texture = ExtResource( 30 )
34/tex_offset = Vector2( 0, -64 )
34/modulate = Color( 1, 1, 1, 1 )
34/region = Rect2( 192, 192, 128, 160 )
34/tile_mode = 0
34/occluder_offset = Vector2( 0, 0 )
34/navigation_offset = Vector2( 0, 0 )
34/shapes = [  ]
34/z_index = 0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform vec4 current_color : hint_color;

void fragment(){
	
	vec4 final_color = mix(texture(TEXTURE, UV), current_color, texture(TEXTURE, UV).a);
	COLOR = final_color;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/current_color = Color( 0.870588, 0.831373, 0.113725, 0.466667 )

[node name="LevelTemplate" type="Node2D"]
script = ExtResource( 1 )

[node name="MapTemplate" type="TileMap" parent="."]
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 64 )
format = 1
tile_data = PoolIntArray( -786417, 5, 0, -720880, 5, 0, -196584, 5, 0, -131047, 5, 0, 9, 16, 0, 131072, 10, 0, 196609, 10, 0, 720905, 10, 0, 786442, 10, 0 )

[node name="TowerContainer" type="YSort" parent="."]

[node name="EnemyContainer" type="YSort" parent="."]

[node name="ProjectileContainer" type="YSort" parent="."]

[node name="Routes" type="Node2D" parent="."]

[node name="First_Path" type="Path2D" parent="Routes"]
curve = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1005.57, 533.085 )
current = true
zoom = Vector2( 1.6, 1.6 )

[node name="Build_Tool" type="Node2D" parent="."]

[node name="AttackRange" type="Polygon2D" parent="Build_Tool"]
position = Vector2( 0, 44 )
color = Color( 0.937255, 0.784314, 0.027451, 0.227451 )
polygon = PoolVector2Array( 0, -160, 320, 0, 0, 160, -320, 0 )

[node name="BuildInterface" type="Sprite" parent="Build_Tool"]
material = SubResource( 4 )
position = Vector2( 0, -20 )
scale = Vector2( 0.8, 1 )
texture = ExtResource( 37 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameUI" type="MarginContainer" parent="UI"]
anchor_right = 1.0
margin_bottom = 50.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameUI"]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 83.0

[node name="MenusOptions" type="HBoxContainer" parent="UI/GameUI/VBoxContainer"]
margin_right = 974.0
margin_bottom = 50.0
alignment = 2

[node name="Pause" type="TextureButton" parent="UI/GameUI/VBoxContainer/MenusOptions"]
margin_left = 816.0
margin_right = 866.0
margin_bottom = 50.0
texture_normal = ExtResource( 38 )

[node name="Options" type="TextureButton" parent="UI/GameUI/VBoxContainer/MenusOptions"]
margin_left = 870.0
margin_right = 920.0
margin_bottom = 50.0
texture_normal = ExtResource( 39 )

[node name="Help" type="TextureButton" parent="UI/GameUI/VBoxContainer/MenusOptions"]
margin_left = 924.0
margin_right = 974.0
margin_bottom = 50.0
texture_normal = ExtResource( 40 )

[node name="Level" type="RichTextLabel" parent="UI/GameUI/VBoxContainer"]
margin_top = 54.0
margin_right = 974.0
margin_bottom = 54.0

[node name="Money" type="RichTextLabel" parent="UI/GameUI/VBoxContainer"]
margin_top = 58.0
margin_right = 974.0
margin_bottom = 58.0

[node name="BuildUI" type="NinePatchRect" parent="UI"]
self_modulate = Color( 1, 1, 1, 0.494118 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
texture = ExtResource( 41 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/BuildUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.11157
margin_top = 0.370544
margin_right = 1.11157
margin_bottom = 0.370544
custom_constants/separation = 15
alignment = 1

[node name="Red_Tower_Button" type="TextureButton" parent="UI/BuildUI/HBoxContainer"]
margin_left = 424.0
margin_top = 10.0
margin_right = 504.0
margin_bottom = 90.0
rect_min_size = Vector2( 80, 80 )
size_flags_vertical = 4
texture_normal = ExtResource( 42 )
texture_pressed = ExtResource( 43 )
texture_hover = ExtResource( 44 )
expand = true

[node name="TextureRect" type="TextureRect" parent="UI/BuildUI/HBoxContainer/Red_Tower_Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 5.0
margin_right = -15.0
margin_bottom = -15.0
size_flags_horizontal = 4
texture = ExtResource( 45 )
expand = true

[node name="Purple_Tower_Button" type="TextureButton" parent="UI/BuildUI/HBoxContainer"]
margin_left = 519.0
margin_top = 10.0
margin_right = 599.0
margin_bottom = 90.0
rect_min_size = Vector2( 80, 80 )
size_flags_vertical = 4
texture_normal = ExtResource( 42 )
texture_pressed = ExtResource( 43 )
texture_hover = ExtResource( 44 )
expand = true

[node name="TextureRect" type="TextureRect" parent="UI/BuildUI/HBoxContainer/Purple_Tower_Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 5.0
margin_right = -15.0
margin_bottom = -15.0
size_flags_horizontal = 4
texture = ExtResource( 46 )
expand = true

[node name="FPS" type="RichTextLabel" parent="UI"]
margin_right = 279.0
margin_bottom = 40.0

[node name="LaserTest" parent="." instance=ExtResource( 47 )]
visible = false
position = Vector2( 1170.47, 631.984 )
rotation = -2.59674
[connection signal="button_down" from="UI/BuildUI/HBoxContainer/Red_Tower_Button" to="." method="_on_Select_Tower_button_down" binds= [ "Red_Tower" ]]
[connection signal="mouse_entered" from="UI/BuildUI/HBoxContainer/Red_Tower_Button" to="." method="_on_Tower_Button_mouse_entered"]
[connection signal="mouse_exited" from="UI/BuildUI/HBoxContainer/Red_Tower_Button" to="." method="_on_Tower_Button_mouse_exited"]
[connection signal="button_down" from="UI/BuildUI/HBoxContainer/Purple_Tower_Button" to="." method="_on_Select_Tower_button_down" binds= [ "Purple_Tower" ]]
[connection signal="mouse_entered" from="UI/BuildUI/HBoxContainer/Purple_Tower_Button" to="." method="_on_Tower_Button_mouse_entered"]
[connection signal="mouse_exited" from="UI/BuildUI/HBoxContainer/Purple_Tower_Button" to="." method="_on_Tower_Button_mouse_exited"]
